--- a/style.css
+++ b/style.css
@@ -107,3 +107,26 @@ a:hover {
     margin-right: 15px;
     color: #444;
 }
+
+/* Button */
+.btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.btn button {
+    margin: 2rem 1rem;
+    padding: 0.3rem;
+    border-radius: 5px;
+    width: 150px;
+    border: none;
+    background: #d9d9d9;
+}
+
+.btn button:hover {
+    box-shadow: 0 0 10px 0 gainsboro;
+    border-radius: 5px;
+    cursor: pointer;
+}
